# u3

./: Cargo.toml
examples/: cmd-macro.rs  cmd-pretty-tracing.rs  cmd-pretty.rs  see-path.rs  tracing-fmt-default.rs
src/: lib.rs
src/chrono/: ext.rs  mod.rs  now_stable.rs  now_uniform.rs
src/cmd/: commons.rs  expect_noexit.rs  expect_success.rs  mod.rs  pause_on_failure.rs  pretty.rs  pretty_term.rs  pretty_tracing.rs
src/env/: git.rs  mod.rs
src/err/: mod.rs  trace_anyhow.rs
src/term/: color_ext.rs  mod.rs
src/tracing/: fmt_default.rs  mod.rs
