[package]
name = "u3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
dunce = "1.0.5"
termcolor = "1.4.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["chrono", "local-time"] }
